group("Igniter")
{
    deps =
    [
        ":Stage2",

        #":IgniterTool",
        ":IgniterTool(${host_toolchain})",
    ]

    if (current_arch == "x86")
    {
        toolchain_x86 = "//build/toolchain/x86/:x86"

        deps +=
        [
            # Note that we explicitly depend on 32-bit versions of these stages.
            ":Stage0(${toolchain_x86})",
            ":Stage1(${toolchain_x86})",
            ":Stage2(${toolchain_x86})",
        ]
    }
}

library("IgniterUtils")
{
    library_name = "System.Boot.Igniter.IgniterUtils"
    library_version = "0.1.0"
    use_stdlib = host_build
    is_source_set = true
    target_types = ["static", "kernel", "host_static"]

    include_prefix = "System/Boot/Igniter"

    deps =
    [
    ]

    public_sources =
    [
        "CHS.hh",
    ]

    sources =
    [
        "CHS.cc",
    ]

    if (!host_build)
    {
        deps =
        [
            "//C++/LanguageSupport",
        ]
    }
}

if (current_arch == "x86")
{
    xvi_executable("Stage0")
    {
        prefix = "System.Boot.Igniter"

        output_name = "Stage0.bin"
        use_stdlib = false
        
        sources =
        [
            "Arch/x86/Stage0/MBR.S",
        ]

        inputs =
        [
            "Arch/x86/Stage0/MBR.ldscript",
        ]
        
        ldflags =
        [
            "-T", rebase_path("Source/System/Boot/Igniter/Arch/x86/Stage0/MBR.ldscript", root_build_dir),
        ]
    }

    xvi_executable("Stage1")
    {
        prefix = "System.Boot.Igniter"

        output_name = "Stage1.elf"
        use_stdlib = false
        link_style = "kernel"

        deps =
        [
            ":IgniterUtils",

            "//ABI/C++",
            "//ABI/Integer",
            "//Allocator/Classic",
            "//C++/StdLib",
            "//Executable/Image/ELF",
            "//Filesystem/FAT",
            "//HW/CPU/Arch/x86/ControlRegs",
            "//HW/CPU/Arch/x86/IO",
            "//Storage/Partition/:Partition_Boot",
            "//Utility/Logger",
        ]

        sources =
        [
            "Arch/x86/Stage1/A20.hh",
            "Arch/x86/Stage1/BIOSCall.hh",
            "Arch/x86/Stage1/BlockCache.hh",
            "Arch/x86/Stage1/DiskIO.hh",
            "Arch/x86/Stage1/Heap.hh",
            "Arch/x86/Stage1/Logging.hh",
            "Arch/x86/Stage1/MemoryLayout.hh",
            "Multiboot/v1.hh",
            "Multiboot/v2.hh",

            "Arch/x86/Stage1/main.cc",
            "Arch/x86/Stage1/A20.cc",
            "Arch/x86/Stage1/BIOSCall.cc",
            "Arch/x86/Stage1/BlockCache.cc",
            "Arch/x86/Stage1/DiskIO.cc",
            "Arch/x86/Stage1/Heap.cc",
            "Arch/x86/Stage1/Logging.cc",

            "Arch/x86/Stage1/BIOSCall.S",
            "Arch/x86/Stage1/RealModeEntry.S",
        ]

        inputs =
        [
            "Arch/x86/Stage1/Stage1.ldscript",
        ]

        ldflags =
        [
            "-T", rebase_path("Source/System/Boot/Igniter/Arch/x86/Stage1/Stage1.ldscript", root_build_dir),
        ]
    }
}

xvi_executable("Stage2")
{
    prefix = "System.Boot.Igniter"

    output_name = "Stage2.${current_cpu}"
    use_stdlib = false

    deps =
    [
        "//ABI/C++:C++__kernel",
        "//ABI/ExecContext:ExecContext__kernel",
        "//Allocator/Classic:Classic__kernel",
        "//C++/StdLib:StdLib__kernel",
        "//Utility/Logger:Logger__kernel",
    ]

    sources =
    [
        "Memory/Bitmap.hh",
        "Multiboot/v1.hh",
        "Multiboot/v2.hh",

        "Memory/Bitmap.cc",
    ]

    inputs =
    [
    ]

    if (current_arch == "x86")
    {
        deps +=
        [
            "//Firmware/EFI:EFI__kernel",
            "//HW/CPU/Arch/x86/IO:IO__kernel",
            "//HW/CPU/Arch/x86/MMU:MMU__kernel",
            "//HW/CPU/Arch/x86/Segmentation:Segmentation__kernel",
            "//HW/GPU/VGA:VGA__kernel",
        ]

        sources +=
        [
            "Arch/x86/Stage2/Allocator.cc",
        ]

        inputs +=
        [
        ]
        
        if (current_cpu == "x86")
        {
            deps +=
            [
                "//Firmware/Arch/x86/BIOS:BIOS__kernel",
            ]
            
            sources +=
            [
                "Arch/x86/Stage2/Logging.hh",
                "Arch/x86/Stage2/Interrupts.hh",
                "Arch/x86/Stage2/Probe.hh",
                "Arch/x86/Stage2/V86.hh",
                "Arch/x86/Stage2/VGAConsole.hh",

                "Arch/x86/Stage2/Entry.S",
                "Arch/x86/Stage2/InterruptEntry.S",

                "Arch/x86/Stage2/Entry.cc",
                "Arch/x86/Stage2/Interrupts.cc",
                "Arch/x86/Stage2/MultibootHeader.cc",
                "Arch/x86/Stage2/Probe.cc",
                "Arch/x86/Stage2/V86.cc",
                "Arch/x86/Stage2/VGAConsole.cc",
            ]

            inputs +=
            [
                "Arch/x86/Stage2/Stage2.ldscript",
            ]

            ldflags =
            [
                "-T", rebase_path("Source/System/Boot/Igniter/Arch/x86/Stage2/Stage2.ldscript", root_build_dir),
                "-Wl,--emit-relocs",
            ]
        }
        else if (current_cpu == "x64")
        {
            deps +=
            [
            ]

            sources +=
            [
            ]

            inputs +=
            [
            ]
        }
    }
}

xvi_executable("IgniterTool")
{
    prefix = "System.Boot.Igniter"

    #output_name = "IgniterTool"
    
    deps =
    [
        ":IgniterUtils",

        "//Filesystem/FAT",
        "//Utility/Logger",
    ]

    sources =
    [
        "Tool/Blocklist.hh",
        "Tool/Bootsector.hh",
        "Tool/Disk.hh",

        "Tool/main.cc",
        "Tool/Blocklist.cc",
        "Tool/Bootsector.cc",
        "Tool/Disk.cc",
    ]
}
