library("Atomic")
{
    library_name    = "System.C++.Atomic"
    library_version = "0.1.0"

    define_header_target = true
    use_stdlib = false

    public_deps =
    [
    ]

    header_deps =
    [
    ]

    public_headers =
    [
        "Atomic.hh",
        "Private/Config.hh",
        "Private/Namespace.hh",
    ]

    if (!host_build)
    {
        public_deps +=
        [
            "//ABI/Atomic",
        ]
    }
}
